Add bootstrap files and revert index.ejs to default

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html ng-app="coursePlanner">
+<html>
   <head>
+    <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.1/angular.min.js"></script>
-    <script src="controller.js"></script>
   </head>
-  <body ng-controller="mainController">
-     <h1>Test</h1>
+  <body>
+    <h1><%= title %></h1>
+    <p>Welcome to <%= title %></p>
   </body>
 </html>
