--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html ng-app="coursePlanner">
   <head>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.1/angular.min.js"></script>
+    <link rel='stylesheet' href='public/stylesheets/bootstrap.min.csss' />
     <script src="controller.js"></script>
   </head>
+  <body>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Test</a>
+    </div>
+  </div>
+</nav>
+  </body>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="public/javascripts/bootstrap.min.js"></script>
 </html>
