--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,14 @@
-/* Empty for now, add custom css later */
+body { 
+	padding-top: 80px; 
+}
+
 .slim-jumbotron {
 	padding-top: 15px;
 	padding-bottom: 15px;
 }
 
 #mynetwork {
-	width: 600px;
-	height: 400px;
+	width: 100%;
+	height: 500px;
 	border: 1px solid lightgray;
 }
