--- a/app_server/views/index.ejs
+++ b/app_server/views/index.ejs
@@ -58,7 +58,24 @@
 				</div>
 			</div>
 		</div>
-		
+
+    <div class="modal fade major-minor-modal-md" tabindex="-1" role="dialog" aria-labelledby="myMediumModalLabel">
+      <div class="modal-dialog modal-md">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          </div>
+          <div class="modal-body">
+            <div class="container-fluid">
+              <div class="jumbotron slim-jumbotron">
+                <ul id="major-minor-list"></ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
 		<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-2">
@@ -68,8 +85,8 @@
 				</div>
 				<div class="panel-body">
 					<div class="btn-group-vertical">
-							<a href="#" class="btn btn-default">Select major(s)</a>
-							<a href="#" class="btn btn-default">Select minor(s)</a>
+							<a href="#" id="selectMajor" class="btn btn-default">Select major(s)</a>
+							<a href="#" id="selectMinor" class="btn btn-default">Select minor(s)</a>
 							<a href="#" class="btn btn-default disabled">Add completed course(s)</a>
 					</div>
 				</div>
@@ -87,7 +104,7 @@
 			</div>
 		</div>
 		</div>
-		
+
 		<script src='/javascripts/jquery-3.1.1.min.js'></script>
 		<script src='/bootstrap/js/bootstrap.min.js'></script>
 		<script src='/javascripts/vis.min.js'></script>
