--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,8 +7,12 @@ body {
 	padding-bottom: 15px;
 }
 
+html, body {
+	height: 100%;
+}
+
 #mynetwork {
 	width: 100%;
-	height: 500px;
+	height: 80vh;
 	border: 1px solid lightgray;
 }
