Added buttons to major/minor selection

--- a/app_server/views/index.ejs
+++ b/app_server/views/index.ejs
@@ -69,7 +69,7 @@
           <div class="modal-body">
             <div class="container-fluid">
               <div class="jumbotron slim-jumbotron">
-                <ul id="major-minor-list"></ul>
+                <div id="major-minor-list" class="btn-group-vertical center-block"></div>
               </div>
             </div>
           </div>
