Draw CS course nodes

--- a/app_server/views/index.ejs
+++ b/app_server/views/index.ejs
@@ -149,7 +149,7 @@
 									<a href="#" id="selectMajor" class="btn btn-default">Select major(s)</a>
 									<a href="#" id="selectMinor" class="btn btn-default">Select minor(s)</a>
 									<a href="#" class="btn btn-default disabled">Add course(s)</a>
-									<a ng-click='controller.yell()' href='#' id="selectMajor2" class="btn btn-default">Select major(s) (Ang)</a>
+									<!--<a ng-click='controller.yell()' href='#' id="selectMajor2" class="btn btn-default">Select major(s) (Ang)</a>-->
 							</div>
 						</div>
 					</div>
