Added ability to name plans

--- a/app_server/views/index.ejs
+++ b/app_server/views/index.ejs
@@ -110,6 +110,24 @@
       </div>
     </div>
 
+    <div class="modal fade savePlan-modal" id="savePlan-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          </div>
+            <div class="loginmodal-container">
+              <h1>Enter a name for your plan:</h1><br>
+              <h5 id="emptySave" style="display:none;">Name cannot be empty!</h5><br>
+              <form>
+                <input id="planNameInput" type="text" placeholder="Plan Name">
+                <input id="submitPlanName" type="submit" class="savePlan savePlan-submit" value="Save">
+              </form>
+            </div>
+        </div>
+      </div>
+    </div>
+
     <div class="modal fade logout-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display:none;">
       <div class="modal-dialog">
         <div class="modal-content">
