--- a/app_server/views/index.ejs
+++ b/app_server/views/index.ejs
@@ -25,7 +25,7 @@
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">File <span class="caret"></span></a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="#">New plan...</a></li>
+								<li><a id ="newBtn" href="#">New plan...</a></li>
 								<li><a id="loadBtn" href="#">Open plan...</a></li>
 								<li><a id="saveBtn" href="#">Save plan...</a></li>
 								<li class="divider"></li>
