--- a/app_server/views/index.ejs
+++ b/app_server/views/index.ejs
@@ -5,6 +5,9 @@
     <link rel='stylesheet' href='/bootstrap/css/readable.bootstrap.css' />
 		<link rel='stylesheet' href='/stylesheets/style.css' />
 		<link rel='stylesheet' href='/stylesheets/vis.min.css' />
+    <link rel='stylesheet' href='/stylesheets/jquery-ui.min.css' />
+    <link rel='stylesheet' href='/stylesheets/jquery-ui.structure.min.css' />
+    <link rel='stylesheet' href='/stylesheets/jquery-ui.theme.min.css' />    
   </head>
   <body>
 		<nav class="navbar navbar-default navbar-fixed-top">
@@ -71,7 +74,8 @@
 			</div>
 		</div>
 
-    <div class="modal fade major-minor-modal-md" tabindex="-1" role="dialog" aria-labelledby="myMediumModalLabel">
+    <!-- modal window that appears after clicking "select majors" or "select minors" -->
+    <div class="modal fade major-minor-modal-md" tabindex="-1" role="dialog" aria-labelledby="select-major-modal">
       <div class="modal-dialog modal-md">
         <div class="modal-content">
           <div class="modal-header">
@@ -80,9 +84,60 @@
           <div class="modal-body">
             <div class="container-fluid">
               <div class="jumbotron slim-jumbotron">
+                <!-- TODO: make this checkboxes of majors/minors -->
                 <div id="major-minor-list" class="btn-group-vertical center-block"></div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- modal window that appears after clicking "add node" -->
+    <div class="modal fade add-node-modal-md tabindex="-1" role="dialog" aria-labelledby="add-node-modal">
+      <div class="modal-dialog modal-md">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title">Add a course node</h4>
+          </div>
+          <div class="modal-body">
+            <div class="ui-widget">
+              <label for="searchCourses">Enter or search for a course ID: </label>
+              <input id="searchCourses" placeholder="COMPSCI150">
+            </div>
+            <div class="ui-widget">
+              <label for="addCourseLevel">Enter a semester number to add course to (1-12): </label>
+              <input type="number" id="addCourseLevel" min="1" max="12">
+            </div>
+            <h5 id="addCourseError" class="text-center" style="display: none;"></h5>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-primary" id="addCourseBtn">Add</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- modal window that appears after clicking "edit node" -->
+    <div class="modal fade edit-node-modal-md tabindex="-1" role="dialog" aria-labelledby="edit-node-modal">
+      <div class="modal-dialog modal-md">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title">Edit a course node</h4>
+          </div>
+          <div class="modal-body">
+            <div class="ui-widget">
+              <label id="editLabel" for="editCourseLevel">Enter a semester number to move this course to (1-12): </label>
+              <input type="number" id="editCourseLevel" min="1" max="12">
+            </div>
+            <h5 id="editCourseError" class="text-center" style="display: none;"></h5>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-primary" id="editCourseBtn">Edit</button>
           </div>
         </div>
       </div>
@@ -219,10 +274,7 @@
 						</div>
 						<div class="panel-body">
 							<div ng-controller="mController as controller" class="btn-group-vertical">
-									<a href="#" id="selectMajor" class="btn btn-default">Select major(s)</a>
-									<a href="#" id="selectMinor" class="btn btn-default">Select minor(s)</a>
-									<a href="#" class="btn btn-default disabled">Add course(s)</a>
-									<!--<a ng-click='controller.yell()' href='#' id="selectMajor2" class="btn btn-default">Select major(s) (Ang)</a>-->
+									<a href="#" id="selectMajor" class="btn btn-default">Select major</a>
 							</div>
 						</div>
 					</div>
@@ -252,6 +304,8 @@
 		<script src='/javascripts/jquery-3.1.1.min.js'></script>
 		<script src='/bootstrap/js/bootstrap.min.js'></script>
 		<script src='/javascripts/vis.min.js'></script>
+    <script src='/javascripts/jquery-ui.min.js'></script>
+    <script src='/javascripts/CourseNode.js'></script>    
 		<script src='/javascripts/index-script.js'></script>
 		<script src='/javascripts/angular-controller.js'></script>
     <script>
