--- a/app_server/views/index.ejs
+++ b/app_server/views/index.ejs
@@ -37,23 +37,26 @@
 						</li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#">Help</a></li>
+						<li><a href="#" id="helpBtn" data-toggle="modal" data-target="#help-modal">Help</a></li>
 						<li><a href="#" id="loginBtn" data-toggle="modal" data-target="#login-modal">Login</a></li>
             <li><a href="#" id="logoutBtn" style="display: none;">Logout</a></li>
 					</ul>
 				</div>
 			</div>
 		</nav>
+    
     <div class="alert alert-success" id="successSave">
         <button type="button" class="close" data-dismiss="alert">x</button>
         <strong>Success! </strong>
         Plan has been successfully saved.
     </div>
+    
     <div class="alert alert-danger" id="failSave">
         <button type="button" class="close" data-dismiss="alert">x</button>
         <strong>Failure! </strong>
         Something went wrong while trying to save plan.
     </div>
+
 		<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
 			<div class="modal-dialog modal-lg">
 				<div class="modal-content">
@@ -63,7 +66,7 @@
 					<div class="modal-body">
 						<div class="container-fluid">
 							<div class="jumbotron slim-jumbotron">
-								<h1>Welcome to UWM Course Planner</h1>
+								<h2>Welcome to UWM Course Planner</h2>
 								<p>UWM Course Planner is a tool for planning and visualizing a UW-Milwaukee student’s path to graduation.<br/><strong>Take the courses you want, when you need to!</strong></p>
 								<img class="img-responsive img-rounded" src="/images/HP_Lucero_Rocha2.jpg"><br/>
 								<p><a class="btn btn-primary btn-lg" data-toggle="modal" data-target=".bs-example-modal-lg">Get started</a></p>
@@ -121,7 +124,7 @@
     </div>
 
     <!-- modal window that appears after clicking "edit node" -->
-    <div class="modal fade edit-node-modal-md tabindex="-1" role="dialog" aria-labelledby="edit-node-modal">
+    <div class="modal fade edit-node-modal-md" tabindex="-1" role="dialog" aria-labelledby="edit-node-modal">
       <div class="modal-dialog modal-md">
         <div class="modal-content">
           <div class="modal-header">
@@ -130,14 +133,55 @@
           </div>
           <div class="modal-body">
             <div class="ui-widget">
+              <p>The currently selected course node <span id='editCourseId'></span> is in semester <span id='editCourseCurLevel'></span>.</p>
               <label id="editLabel" for="editCourseLevel">Enter a semester number to move this course to (1-12): </label>
               <input type="number" id="editCourseLevel" min="1" max="12">
+              <div class="checkbox">
+                <label>
+                <input id="completedCheckbox" type="checkbox"> Mark course as completed
+                </label>
+              </div>
             </div>
             <h5 id="editCourseError" class="text-center" style="display: none;"></h5>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
             <button type="button" class="btn btn-primary" id="editCourseBtn">Edit</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- modal window that appears after clicking "Help" -->
+    <div class="modal fade help-modal-md" id="help-modal" tabindex="-1" role="dialog" aria-labelledby="help-modal">
+      <div class="modal-dialog modal-md">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title">Help</h4>
+          </div>
+          <div class="modal-body">
+          <h5>Basic functions</h5>
+            <ul>
+              <li>Click "Select major" button inside "Controls" box, then click "Computer Science" to load the default CS course plan</li>
+              <li>Click Login in upper right corner to enable save/load plan functionality</li>
+              <li>Click "File" menu in top navbar to access save/load/share commands</li>
+            </ul>
+          <h5>Course graph functions</h5>
+            <ul>
+              <li>To add a node, click "Edit" button on upper left corner of graph, click "Add Node", and click in an empty space anywhere on graph</li>
+              <li>To edit a node, click a course node to select it, then click "Edit" button, and finally click "Edit Node"</li>
+              <li>To delete a node, click a course node to select it, then click "Edit" button, and finally click "Delete selected"</li>
+            </ul>                        
+          <h5>Course graph mouse controls</h5>
+            <ul>
+              <li>Use mouse scroll wheel inside Course Graph to zoom in and out</li>
+              <li>Click and drag on empty space inside Course Graph to move the graph around the canvas</li>
+              <li>Hover mouse pointer over a course node to view more information</li>
+            </ul>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
@@ -267,19 +311,31 @@
 		<div class="container-fluid">
 			<div class="main-content">
 				<div class="row">
-					<div class="col-xs-12 col-lg-2">
-					<div class="panel panel-primary">
-						<div class="panel-heading">
-							<h3 class="panel-title">Controls</h3>
-						</div>
-						<div class="panel-body">
-							<div ng-controller="mController as controller" class="btn-group-vertical">
-									<a href="#" id="selectMajor" class="btn btn-default">Select major</a>
-							</div>
-						</div>
+					<div class="col-xs-12 col-md-3 col-lg-2">
+  					<div class="panel panel-primary">
+  						<div class="panel-heading">
+  							<h3 class="panel-title">Controls</h3>
+  						</div>
+  						<div class="panel-body">
+  							<div ng-controller="mController as controller" class="btn-group-vertical">
+  									<a href="#" id="selectMajor" class="btn btn-default">Select major</a>
+  							</div>
+  						</div>
+  					</div>
+            <div class="panel panel-primary">
+              <div class="panel-heading">
+                <h3 class="panel-title">Log</h3>
+              </div>
+              <div class="panel-body">
+                <div id="log">
+                    <ul>
+                      <li>App started</li>
+                    </ul>
+                </div>
+              </div>
+            </div>
 					</div>
-					</div>
-					<div class="col-xs-12 col-lg-10">
+					<div class="col-xs-12 col-md-9 col-lg-10">
 						<div class="panel panel-primary">
 							<div class="panel-heading">
 								<h3 class="panel-title">Course Graph</h3>
@@ -305,7 +361,8 @@
 		<script src='/bootstrap/js/bootstrap.min.js'></script>
 		<script src='/javascripts/vis.min.js'></script>
     <script src='/javascripts/jquery-ui.min.js'></script>
-    <script src='/javascripts/CourseNode.js'></script>    
+    <script src='/javascripts/CourseNode.js'></script>
+    <script src='/javascripts/UniqueCourse.js'></script>          
 		<script src='/javascripts/index-script.js'></script>
 		<script src='/javascripts/angular-controller.js'></script>
     <script>
